kubernetes/kasten/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasten
  namespace: kasten-io
  annotations:
    nginx.ingress.kubernetes.io/app-root: /kasten/
spec:
  ingressClassName: nginx
  rules:
    - host: kasten.nodadyoushutup.com
      http:
        paths:
          - path: /kasten
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
